# minimal-frame-interpolation

./: .clang-format  .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  README.md  compile_commands.json
.github/workflows/: ci.yml
assets/shaders/: texture_renderer.frag.wgsl  texture_renderer.vert.wgsl
bench/: CMakeLists.txt  minfi_bench.cpp
include/minfi/: interpolate.hpp
src/: interpolate.cpp  main.cpp  viewer.cpp  wgpu_demo.cpp
src/viewer/: CMakeLists.txt  fs.wgsl  gpu_device.cpp  gpu_device.h  renderer.cpp  surface.cpp  surface_macos.mm  util.cpp  viewer.cpp  viewer.hpp  vs.wgsl
src/viewer/demo/: CMakeLists.txt  image.cpp  main.cpp  rgb.cpp
tests/: CMakeLists.txt  minfi_interpolate_test.cpp
tools/: run_clang_format_check.sh  run_clang_format_fix.sh
